# tft-helper

./: LICENSE  README.md  pyproject.toml
src/tft_helper/: interface.py  main.py
src/tft_helper/utils/: text_image_scraper.py  website_scraper.py
tests/: test.py
