[tool.poetry]
name = "tft-helper"
version = "0.1.0"
description = ""
authors = ["Loi Nguyen <loiem560@gmail.com>"]
readme = "README.md"
packages = [{include = "tft_helper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
